hphp/hack/test/typecheck/modules/internal_outside_module.php.exp
File "internal_outside_module.php", line 3, characters 1-8:
Cannot use unstable feature: `modules` (Parsing[1002])
File "internal_outside_module.php", line 3, characters 19-19:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
File "internal_outside_module.php", line 5, characters 1-8:
Cannot use unstable feature: `modules` (Parsing[1002])
File "internal_outside_module.php", line 5, characters 16-16:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
File "internal_outside_module.php", line 6, characters 3-10:
Cannot use unstable feature: `modules` (Parsing[1002])
File "internal_outside_module.php", line 6, characters 21-21:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
File "internal_outside_module.php", line 9, characters 1-8:
Cannot use unstable feature: `modules` (Parsing[1002])
File "internal_outside_module.php", line 9, characters 15-20:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
